[gd_scene load_steps=3 format=3 uid="uid://dd6a6wprugy8v"]

[ext_resource type="Script" path="res://src/menu/Pause.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bh8672uj3c4gn" path="res://src/menu/Options.tscn" id="2"]

[node name="Pause" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Pause" type="MarginContainer" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control/Pause"]
layout_mode = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="Control/Pause"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Pause/CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="Control/Pause/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="Control/Pause/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Back" type="Button" parent="Control/Pause/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="Options" parent="Control" instance=ExtResource("2")]
visible = false
layout_mode = 0
anchors_preset = 0

[connection signal="pressed" from="Control/Pause/CenterContainer/VBoxContainer/Resume" to="Control" method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/Pause/CenterContainer/VBoxContainer/Options" to="Control" method="_on_Options_pressed"]
[connection signal="pressed" from="Control/Pause/CenterContainer/VBoxContainer/Back" to="Control" method="_on_Back_pressed"]
